# LLM_start_AI_driven

./: .env  .gitignore  README.md  bot.py  config.py  llm_client.py  logger.py  main.py  pyproject.toml
.cursor/rules/: convensions.mdc  workflow.mdc
doc/: conventions.md  product_idea.md  tasklist.md  vision.md  workflow.md
llm_start_ai_driven.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
